# Xiaomi_compiler_course

./: README.md
game_of_life/: CMakeLists.txt  Makefile  game_IL.ll  game_of_life.c  graphics.c  graphics.h
game_of_life/src/: CMakeLists.txt  game_of_life.c  graphics.cc  graphics.h
